--- a/honeypot/Dockerfile
+++ b/honeypot/Dockerfile
@@ -2,7 +2,17 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY honeypot.py .
+# Install dependencies for paramiko libary 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    libssl-dev \
+    libffi-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Paramiko for SSH simulation
+RUN pip install paramiko
+
+COPY honeypot.py logger.py ./
 
 # Create logs directory
 RUN mkdir -p /app/logs
