completed port knocking using knockd

--- a/port_knocking/Dockerfile
+++ b/port_knocking/Dockerfile
@@ -3,9 +3,14 @@ FROM python:3.11-slim
 WORKDIR /app
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends iptables iproute2 \
+    && apt-get install -y \
+    iptables knockd netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
-COPY knock_server.py knock_client.py ./
+COPY entrypoint.sh ./
 
-CMD ["python3", "knock_server.py"]
+RUN chmod +x entrypoint.sh
+
+COPY knockd.conf /
+
+CMD [ "./entrypoint.sh" ]
