--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,10 +113,10 @@ services:
       - NET_ADMIN
       - NET_RAW
     ports:
-      - "2222:2222"
-      - "1234:1234"
-      - "5678:5678"
-      - "9012:9012"
+      - "3306:3306"   # Protected Port
+      - "1234:1234"   # Knock 1
+      - "5678:5678"   # Knock 2
+      - "9012:9012"   # Knock 3
     networks:
       vulnerable_network:
         ipv4_address: 172.20.0.40
